--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -5,6 +5,7 @@
     <p>
         <a href='/'>HOME</a>
         <a href='/about'>About</a>
-
+        
+        <a href='/project'>project</a>
     </p>
 </header>
